--- a/Frontend/app/src/main/res/layout/activity_home_ticket_inspector.xml
+++ b/Frontend/app/src/main/res/layout/activity_home_ticket_inspector.xml
@@ -4,102 +4,102 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.HomeTicketInspector">
+    android:background="@drawable/back_home"
+    android:padding="50dp"
+    tools:context=".activities.HomePassenger">
 
     <TextView
-        android:id="@+id/idTVWelcome"
+        android:id="@+id/idTVHeading"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="120dp"
-        android:height="50dp"
-        android:text="Welcome, Ticket Inspector"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="14dp"
+        android:layout_marginEnd="20dp"
+        android:text="Hello,"
+        android:textAlignment="viewStart"
+        android:textColor="@color/black"
+        android:textSize="45sp"
         android:textStyle="bold"
-        android:textSize="25sp"
-        android:textColor="@color/DarkYellow"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.95"
+        app:layout_constraintHorizontal_bias="0.18"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mainLogo" />
+
+    <TextView
+        android:id="@+id/TVuserName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Sandani Thilakarathna"
+        android:textSize="25sp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="15dp"
+        app:layout_constraintTop_toBottomOf="@id/idTVHeading"
+        app:layout_constraintStart_toStartOf="@id/idTVHeading"
+        app:layout_constraintEnd_toEndOf="@id/idTVHeading"
+        />
+
+    <ImageView
+        android:id="@+id/mainLogo"
+        android:layout_width="232dp"
+        android:layout_height="220dp"
+        android:layout_marginTop="60dp"
+        android:src="@drawable/main_logo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/idCardView"
+    <Button
+        android:id="@+id/idBTNScan"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@id/idTVWelcome"
-        app:layout_constraintStart_toStartOf="@id/idTVWelcome"
-        app:layout_constraintStart_toEndOf="@id/idTVWelcome">
+        android:layout_height="48dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="20dp"
+        android:backgroundTint="@color/white"
+        android:text="Scan QR"
+        android:textAllCaps="false"
+        android:textColor="#FFA616"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/idTVHeading"
+        app:layout_constraintStart_toStartOf="@+id/idTVHeading"
+        app:layout_constraintTop_toBottomOf="@+id/mainLogo"
+        app:layout_constraintVertical_bias="0.426" />
 
-        <LinearLayout
-            android:id="@+id/row1"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_gravity="center">
+    <Button
+        android:id="@+id/idBTNReportViolation"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:backgroundTint="@color/white"
+        android:text="Report Violation"
+        android:textAllCaps="false"
+        android:textColor="#FFA616"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/idBTNScan"
+        app:layout_constraintStart_toStartOf="@+id/idBTNScan"
+        app:layout_constraintTop_toBottomOf="@+id/idBTNScan"
+        app:layout_constraintVertical_bias="0.0" />
 
-                <TextView
-                    android:id="@+id/card1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:width="150dp"
-                    android:height="150dp"
-                    android:gravity="center"
-                    android:text="card1"
-                    android:textSize="20sp"
-                    android:textAlignment="center"
-                    android:background="@drawable/rounded_yellow_button"
-                    android:layout_margin="20dp"/>
+    <Button
+        android:id="@+id/idBTNLogout"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:backgroundTint="@color/white"
+        android:text="Log out"
+        android:textAllCaps="false"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/idBTNReportViolation"
+        app:layout_constraintStart_toStartOf="@+id/idBTNReportViolation"
+        app:layout_constraintTop_toBottomOf="@+id/idBTNReportViolation"
+        app:layout_constraintVertical_bias="1.0" />
 
-                <TextView
-                    android:id="@+id/card2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:width="150dp"
-                    android:height="150dp"
-                    android:gravity="center"
-                    android:text="card2"
-                    android:textSize="20sp"
-                    android:background="@drawable/rounded_yellow_button"
-                    android:textAlignment="center"
-                    android:layout_margin="20dp"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/row2"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_gravity="center" >
-
-            <TextView
-                android:id="@+id/card3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:width="150dp"
-                android:height="150dp"
-                android:gravity="center"
-                android:text="card1"
-                android:textSize="20sp"
-                android:textAlignment="center"
-                android:background="@drawable/rounded_yellow_button"
-                android:layout_margin="20dp"/>
-
-            <TextView
-                android:id="@+id/card4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:width="150dp"
-                android:height="150dp"
-                android:gravity="center"
-                android:text="card2"
-                android:textSize="20sp"
-                android:background="@drawable/rounded_yellow_button"
-                android:textAlignment="center"
-                android:layout_margin="20dp"/>
-        </LinearLayout>
-
-    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
